# NV-samples

Media/: NVIDIA_LOGO_SLIGHT_PUSH_track1.h264  webgl_expensive_draw_test.html
ape/: Makefile  ape-app-segments.ld  ape-segments.ld
ape/include/: assert.h  math.h  printf.h  stdint.h  stdio.h  stdlib.h  string.h
ape/libs/: Makefile
ape/make/: Makefile
ape/plugins/: Makefile
flipdemo/: flipdemo
flipdemo/src/: Makefile  bmpdata.h  flipdemo.c  flipdemo.h
gst-nvmedia/: Makefile  gst-nvmedia-check-setup.sh
gst-nvmedia/player/: Makefile  androida4a.c  androida4a.h  avb_sink.c  avb_src.c  bpf.h  capture.c  cmdline.c  cmdline.h  config-parser.c  config-parser.h  context-common.c  cuda_consumer.c  cuda_consumer.h  device-map.c  device-map.h  eglconsumer.c  eglconsumer.h  gst-nvmedia-player  main.c  media.c  pcap.h  player-core-priv.h  player-core.c  player-core.h  raw_socket.c  result.h  taskpool.c  taskpool.h  usbmode.c
gst-nvmedia/utils/: common.c  common.h  fdshare.c  fdshare.h  grutil.c  grutil.h  grutil_wayland.c  grutil_wayland.h  grutil_x11.c  grutil_x11.h
nvavb/daemons/: gPTP.cfg  gPTP_slave.cfg  mrpd  phc2sys  phc_ctl  ptp4l
nvdc/screen_capture/: Makefile  nvdisp_scrncapt  nvscrncapt_utils.c  nvscrncapt_utils.h  test_scrncapt.c
nveva/audiorender/: Makefile  audiorender.c  nvaudiorender
nveva/capturesink/: Makefile  camerainterfaceutil  capturesinktest.c  nvcapturesinktest
nveva/earlyvideoapp/: Makefile  nvearlyvideo
nveva/evargbconverter/: Makefile  evargbconverter.c  ga_rle.c  ga_rle.h  lzf_c.c  lzf_d.c  nvevargbconverter
nveva/ogl-server/: Makefile  README  ogl-server  ogl-server.cc  splash.tga
nveva/startupanimation/: Makefile  nvstartupanimation  startupanimation.c
nvmedia/: Makefile
nvmedia/eglstream/: Makefile  cmdline.c  cmdline.h  cuda_consumer.c  cuda_consumer.h  cuda_producer.c  cuda_producer.h  egloutput_consumer.c  egloutput_consumer.h  eglstrm_setup.c  eglstrm_setup.h  gears_frag.glslf  gears_vert.glslv  gl_consumer.c  gl_consumer.h  gl_producer.c  gl_producer.h  gl_rgbconsumer.c  gl_rgbconsumer.h  gl_yuvconsumer.c  gl_yuvconsumer.h  nvm_consumer.h  nvmimg_consumer.c  nvmimg_producer.c  nvmimg_producer.h  nvmvid_consumer.c  nvmvid_encode.c  nvmvid_encode.h  nvmvid_producer.c  nvmvid_producer.h  screen_consumer.c  screen_consumer.h  testmain.c
nvmedia/img_cap/: Makefile  bali.conf  capture.c  capture.h  check_version.c  check_version.h  cmd_handler.c  cmd_handler.h  cmdline.c  cmdline.h  composite.c  composite.h  display.c  e2379a_c01.conf  e2379b_c01.conf  err_handler.c  err_handler.h  main.c  main.h  nvmimg_cap  parser.c  parser.h  save.c  save.h
nvmedia/img_cc/: Makefile  capture.c  capture.h  capture_status.c  capture_status.h  check_version.c  check_version.h  cmdline.c  cmdline.h  composite.h  display.c  display.h  grp_activate.c  grp_activate.h  i2cCommands.c  i2cCommands.h  main.c  main.h  nvmimg_cc  nvrawfile_interface.h  parser.c  parser.h  runtime_settings.c  runtime_settings.h  save.c  save.h  sensorInfo_ar0231.c  sensorInfo_ar0231.h  sensorInfo_ov10640.c  sensorInfo_ov10640.h  sensor_info.c  sensor_info.h
nvmedia/img_enc/: Makefile  cmdline.c  cmdline.h  image_encoder.c  nvmimg_enc
nvmedia/img_jpgdec/: Makefile  cmdline.c  cmdline.h  image_jpegdec.c  nvmimg_jpgdec
nvmedia/img_jpgenc/: Makefile  cmdline.c  cmdline.h  image_jpegenc.c  nvmimg_jpgenc
nvmedia/img_usbcap/: Makefile  capture.c  capture.h  cmdline.c  cmdline.h  eglstrm_setup.c  eglstrm_setup.h  gl_consumer.c  gl_consumer.h  img_producer.c  img_producer.h  interop.c  interop.h  main.c  main.h  process2d.c  process2d.h  usb_utils.c  usb_utils.h
nvmedia/ipp_capture_encode/: Makefile  check_version.c  check_version.h  cmdline.c  cmdline.h  display.c  display.h  err_handler.c  err_handler.h  image_encoder_top.c  image_encoder_top.h  main.c  main.h  nvmipp_capture_encode  op_stream_handler.c  op_stream_handler.h  staging.c  staging.h  writer.c  writer.h
nvmedia/ipp_file/: Makefile  cmdline.c  cmdline.h  ipp.c  ipp.h  main.c  nvmipp_file
nvmedia/ipp_raw/: Makefile  cmdline.c  e2379_c00.conf  eglstrm_setup.c  gl_consumer.c  gl_consumer.h  img_producer.c  img_producer.h  interop.c  interop.h  ipp_component.c  ipp_component.h  ipp_raw.c  ipp_raw.h  main.c  main.h  p2382_a01.conf  p3407_a00.conf
nvmedia/ipp_ssc/: Makefile  cmdline.c  cmdline.h  display.c  display.h  e2379a_c01.conf  ipp.c  main.c  main.h  nvmipp_ssc  write.c  write.h
nvmedia/ipp_yuv/: Makefile  cmdline.c  (+16 more)
tacp/: README  tacp_ping.sh  tacp_test_app
wayland/weston/libinput/doc/: Makefile.am  absolute-axes.dox  absolute-coordinate-ranges.dox  building.dox  clickpad-softbuttons.dox  device-configuration-via-udev.dox  faqs.dox  libinput.doxygen.in  middle-button-emulation.dox  normalization-of-relative-motion.dox  page-hierarchy.dox  pointer-acceleration.dox  t440-support.dox  tablet-support.dox  tapping.dox  test-suite.dox  touchpad-jumping-cursors.dox
wayland/weston/libinput/test/: Makefile.am  device.c  gestures.c  keyboard.c  litest-device-alps-dualpoint.c  litest-device-apple-magicmouse.c  litest-device-cyborg-rat-5.c  litest-device-generic-singletouch.c  litest-device-huion-pentablet.c  litest-device-keyboard-all-codes.c  litest-device-logitech-trackball.c  litest-device-mouse-wheel-click-angle.c  litest-device-synaptics-hover.c  litest-device-synaptics-i2c.c  litest-device-synaptics-x1-carbon-3rd.c  litest-device-synaptics.c  litest-device-touchscreen-fuzz.c  litest-device-wacom-bamboo-tablet.c  litest-device-wacom-cintiq-13hdt-finger.c  litest-device-wacom-cintiq-13hdt-pad.c  litest-device-wacom-cintiq-13hdt-pen.c  litest-device-wacom-cintiq-24hd.c  litest-device-wacom-cintiq-24hdt-pad.c  litest-device-wacom-cintiq-tablet.c  litest-device-wacom-ekr.c  litest-device-wacom-hid4800-pen.c  litest-device-wacom-intuos-finger.c  litest-device-wacom-intuos-tablet.c  litest-device-wacom-intuos3-pad.c  litest-device-wacom-intuos5-pad.c  litest-device-wacom-isdv4-tablet.c  litest-device-waltop-tablet.c  litest-device-yubikey.c  litest-int.h  litest.c  litest.h  log.c  misc.c  pad.c  path.c  (+10 more)
(+753 files in other folders)
